; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_audit.c_audit_receive_skb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_audit.c_audit_receive_skb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.nlmsghdr = type { i32 }

@NLM_F_ACK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sk_buff*)* @audit_receive_skb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @audit_receive_skb(%struct.sk_buff* %0) #0 {
  %2 = alloca %struct.sk_buff*, align 8
  %3 = alloca %struct.nlmsghdr*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %2, align 8
  %6 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %7 = call %struct.nlmsghdr* @nlmsg_hdr(%struct.sk_buff* %6)
  store %struct.nlmsghdr* %7, %struct.nlmsghdr** %3, align 8
  %8 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %9 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  store i32 %10, i32* %4, align 4
  br label %11

11:                                               ; preds = %34, %1
  %12 = load %struct.nlmsghdr*, %struct.nlmsghdr** %3, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i64 @NLMSG_OK(%struct.nlmsghdr* %12, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %38

16:                                               ; preds = %11
  %17 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %18 = load %struct.nlmsghdr*, %struct.nlmsghdr** %3, align 8
  %19 = call i32 @audit_receive_msg(%struct.sk_buff* %17, %struct.nlmsghdr* %18)
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %29, label %22

22:                                               ; preds = %16
  %23 = load %struct.nlmsghdr*, %struct.nlmsghdr** %3, align 8
  %24 = getelementptr inbounds %struct.nlmsghdr, %struct.nlmsghdr* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @NLM_F_ACK, align 4
  %27 = and i32 %25, %26
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %34

29:                                               ; preds = %22, %16
  %30 = load %struct.sk_buff*, %struct.sk_buff** %2, align 8
  %31 = load %struct.nlmsghdr*, %struct.nlmsghdr** %3, align 8
  %32 = load i32, i32* %5, align 4
  %33 = call i32 @netlink_ack(%struct.sk_buff* %30, %struct.nlmsghdr* %31, i32 %32)
  br label %34

34:                                               ; preds = %29, %22
  %35 = load %struct.nlmsghdr*, %struct.nlmsghdr** %3, align 8
  %36 = load i32, i32* %4, align 4
  %37 = call %struct.nlmsghdr* @NLMSG_NEXT(%struct.nlmsghdr* %35, i32 %36)
  store %struct.nlmsghdr* %37, %struct.nlmsghdr** %3, align 8
  br label %11

38:                                               ; preds = %11
  ret void
}

declare dso_local %struct.nlmsghdr* @nlmsg_hdr(%struct.sk_buff*) #1

declare dso_local i64 @NLMSG_OK(%struct.nlmsghdr*, i32) #1

declare dso_local i32 @audit_receive_msg(%struct.sk_buff*, %struct.nlmsghdr*) #1

declare dso_local i32 @netlink_ack(%struct.sk_buff*, %struct.nlmsghdr*, i32) #1

declare dso_local %struct.nlmsghdr* @NLMSG_NEXT(%struct.nlmsghdr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
